# PythonShellHelper

./: LICENSE  README.md  pyproject.toml
shhelper/: __init__.py  paths.py
